Adding some new files, including gitignore, and Fixed #2

--- a/document/main.bib
+++ b/document/main.bib
@@ -915,6 +915,156 @@ note={\url{https://github.com/jacoco/jacoco/issues/15}}
 	volume = {9},
 	year = {1992}
 }
+@article{Hall:2009:WDM:1656274.1656278,
+	author = {Hall, Mark and Frank, Eibe and Holmes, Geoffrey and Pfahringer, Bernhard and Reutemann, Peter and Witten, Ian H.},
+	title = {The WEKA Data Mining Software: An Update},
+	journal = {SIGKDD Explor. Newsl.},
+	issue_date = {June 2009},
+	volume = {11},
+	number = {1},
+	year = {2009},
+	issn = {1931-0145},
+	pages = {10--18},
+	numpages = {9},
+	url = {http://doi.acm.org/10.1145/1656274.1656278},
+	doi = {10.1145/1656274.1656278}
+}
+@article{witten1999weka,
+	title={Weka: Practical machine learning tools and techniques with Java implementations},
+	author={Witten, Ian H and Frank, Eibe and Trigg, Len and Hall, Mark and Holmes, Geoffrey and Cunningham, Sally Jo},
+	year={1999},
+	publisher={Department of Computer Science, University of Waikato}
+}
+@article{Weiser:1983:Representation,
+	author = {Weiser, M. and Shertz, J.},
+	journal = {International Journal of Man-Machine Studies},
+	number = {4},
+	pages = {391--398},
+	title = {{Programming problem representation in novice and expert programmers}},
+	volume = {19},
+	year = {1983}
+}
+@inproceedings{tew2010developing,
+	title={Developing a validated assessment of fundamental CS1 concepts},
+	author={Tew, Allison Elliott and Guzdial, Mark},
+	booktitle={Proceedings of the 41st ACM technical symposium on Computer science education},
+	pages={97--101},
+	year={2010},
+	organization={ACM}
+}
+@inproceedings{kaczmarczyk2010identifying,
+	title={Identifying student misconceptions of programming},
+	author={Kaczmarczyk, Lisa C and Petrick, Elizabeth R and East, J Philip and Herman, Geoffrey L},
+	booktitle={Proceedings of the 41st ACM technical symposium on Computer science education},
+	pages={107--111},
+	year={2010},
+	organization={ACM}
+}
+@misc{stuart2011building,
+	title={Building Java Programs: A Back to Basics Approach},
+	author={Stuart, Reges and Stepp, M},
+	year={2011},
+	publisher={Boston: Addison-Wesley}
+}
+@article{scott2003bloom,
+	title={Bloom's taxonomy applied to testing in computer science classes},
+	author={Scott, Terry},
+	journal={Journal of Computing Sciences in Colleges},
+	volume={19},
+	number={1},
+	pages={267--274},
+	year={2003},
+	publisher={Consortium for Computing Sciences in Colleges}
+}
+@inproceedings{thompson2008bloom,
+	title={Bloom's taxonomy for CS assessment},
+	author={Thompson, Errol and Luxton-Reilly, Andrew and Whalley, Jacqueline L and Hu, Minjie and Robbins, Phil},
+	booktitle={Proceedings of the tenth conference on Australasian computing education-Volume 78},
+	pages={155--161},
+	year={2008},
+	organization={Australian Computer Society, Inc.}
+}
+@article{gorsuch1997exploratory,
+	title={Exploratory factor analysis: Its role in item analysis},
+	author={Gorsuch, Richard L},
+	journal={Journal of personality assessment},
+	volume={68},
+	number={3},
+	pages={532--560},
+	year={1997},
+	publisher={Taylor \& Francis}
+}
+@techreport{Lewis:1982:ThinkAloudProtocol,
+	author = {Lewis, Clayton H},
+	booktitle = {IBM Research Report RC9265},
+	institution = {IBM},
+	number = {RC-9265},
+	title = {{Using the ``Thinking Aloud'' Method In Cognitive Interface Design}},
+	year = {1982}
+}
+@inproceedings{Johnson:2012:PreFFSAT,
+	author = {Brittany Johnson},
+	booktitle = {Proc. ICSE, Student Research Competition},
+	keywords = {static analysis; tool development; tool evaluation},
+	title = {{A Study on Improving Static Analysis Tools: Why are we not using them?}},
+	year = {2012},
+}
+@article{nelson1967testing,
+	title={TESTING AND EVALUATION IN THE BIOLOGICAL SCIENCES.},
+	author={NELSON, CLARENCE H},
+	year={1967},
+	publisher={ERIC}
+}
+@article{Spinuzzi:2005:Participatory,
+	author = {Clay Spinuzzi},
+	journal = {Technical Commun.},
+	number = {2},
+	pages = {163--174},
+	title = {{The Methodology of Participatory Design}},
+	volume = {52},
+	year = {2005}
+}
+@incollection{Gordon:1998:Coding,
+	author = {R. Gordon},
+	booktitle = {{Basic Interviewing Skills}},
+	title = {Coding Interview Responses},
+	publisher = {Waveland Pr Inc.},
+	pages = {183--199},
+	year = {1998}
+}
+@article{krapp1999interest,
+	title={Interest, motivation and learning: An educational-psychological perspective},
+	author={Krapp, Andreas},
+	journal={European journal of psychology of education},
+	volume={14},
+	number={1},
+	pages={23--40},
+	year={1999},
+	publisher={Springer}
+}
+@article{hall2008we,
+	title={What do we know about developer motivation?},
+	author={Hall, Tracy and Sharp, Helen and Beecham, Sarah and Baddoo, Nathan and Robinson, Hugh},
+	journal={IEEE software},
+	volume={25},
+	number={4},
+	pages={92},
+	year={2008},
+	publisher={IEEE Computer Society}
+}
+@inproceedings{fritz2010degree,
+	title={A degree-of-knowledge model to capture source code familiarity},
+	author={Fritz, Thomas and Ou, Jingwen and Murphy, Gail C and Murphy-Hill, Emerson},
+	booktitle={Proceedings of the 32nd ACM/IEEE International Conference on Software Engineering-Volume 1},
+	pages={385--394},
+	year={2010},
+	organization={ACM}
+}
+@article{tew2010assessing,
+	title={Assessing fundamental introductory computing concept knowledge in a language independent manner},
+	author={Tew, Allison Elliott},
+	year={2010}
+}
 @Manual{RSoftware,
 	title = {R: A Language and Environment for Statistical Computing},
 	author = {{R Core Team}},
@@ -940,4 +1090,14 @@ note={\url{https://github.com/jacoco/jacoco/issues/15}}
 	title={{JFreeChart}},
 	year=2013,
 	note={\url{http://www.jfree.org/jfreechart/}}
+}
+@MISC{log4j,
+	title = {{log4j}},
+	note = {\url{http://logging.apache.org/log4j/}},
+	key = {zzlog4j}
+}
+@MISC{ANT,
+	title = {{ANT}},
+	note = {\url{http://ant.apache.org/}},
+	key = {zzANT}
 }
